@@ -1,4 +1,5 @@
 Veretino 0.3.1 (in dev currently)
+* Added new and improved folder content analyzer.
 * Now the database stores not only the update time, but also the time of the last successful check (when all files from the list are present on the disk and their current checksums have been calculated and match).
 * Added an improved database status display window.
 * The results of database changes are now also displayed in the universal database status window.
